--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,34 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encodig: unicode
+  host:   localhost
+  database: db/ZiGest_development
   pool: 5
+  username: gianni
+  password: root
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encodig: unicode
+  host: localhost
+  database: db/ZiGest_test
   pool: 5
+  username: gianni
+  password: root
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encodig: unicode
+  host: localhost
+  database: db/ZiGest_production
   pool: 5
+  username: gianni
+  password: root
   timeout: 5000
